--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ comparar dados reais com a experiência pessoal de cada indivíduo.</p>
  visualizado.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/conceito.png" alt="">
+                    <img class="img-responsive" src="img/conceito.PNG" alt="">
                 </div>
             </div>
 
@@ -229,10 +229,10 @@ Durante todo este processo desenvolvemos também um código Processing para cria
 
                 </div>
                 <div class="col-xs-12 col-sm-6">
-                    <img class="img-responsive" src="img/sensor2.jpg" alt="">
+                    <img class="img-responsive" src="img/sensor2.JPG" alt="">
                 </div>
 				<div class="col-xs-12 col-sm-6">
-                    <img class="img-responsive" src="img/sensor.jpg" alt="">
+                    <img class="img-responsive" src="img/sensor.JPG" alt="">
                 </div>
 				<div class="col-xs-12 col-sm-offset-2 col-sm-8 embed-responsive embed-responsive-16by9" style="margin-top:20px;">
                     <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/HD6cD0qbzuY" allowfullscreen></iframe>
