--- a/index.html
+++ b/index.html
@@ -262,11 +262,11 @@ Durante todo este processo desenvolvemos também um código Processing para cria
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#Processo" class="page-scroll" style="color:white;">Processo</a>
+                            <a href="#processo" class="page-scroll" style="color:white;">Processo</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#contact" class="page-scroll" style="color:white;">Galeria</a>
+                            <a href="#galeria" class="page-scroll" style="color:white;">Galeria</a>
                         </li>
                     </ul>
                     
